# ucp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  justfile
.just-e2e/: test_e2e.sh  test_e2e_conflict.sh  test_e2e_curate.sh  test_e2e_security.sh  test_perf.sh
.patch-ts/: history.jsonl  provenance.jsonl
docs/: SUMMARY.md  book.toml  index.md  open-ui-mapping.md  spec-v1.md  spec-v2.md  spec-v4.md  w3c-mapping.md  w3c-participation.md
docs/maintainer/: adding-exporter.md  adding-extractor.md  architecture.md  ci-setup.md  merge-algorithm.md  pipeline.md  release-process.md  testing.md
docs/user/: howto-ci.md  howto-tokens.md  howto-watch.md  installation.md  quickstart.md  tutorial-bootstrap.md  tutorial-curate.md  tutorial-export.md  tutorial-merge.md
plans/: v1.md
plans/reviews/: review-dioxus.md  review-gpui-component.md  review-leptos.md
specs/shadcn-rs-api-alignment/: README.md  shadcn-rs-api-alignment-architecture.md  (+4 more)
ucp-cli/: Cargo.toml
ucp-cli/src/: main.rs
ucp-core/: Cargo.toml
ucp-dioxus-out/: review.html  ucp-spec.json
ucp-maintainer/: Cargo.toml
ucp-maintainer/src/: curate.rs  curate_tui.rs  diff.rs  lib.rs  mcp.rs  registry.rs  registry_server.rs  tokens.rs  verify.rs  watch.rs
ucp-maintainer/src/lint/: mod.rs  usage.rs
ucp-maintainer/src/lint/extractors/: mod.rs
ucp-maintainer/src/lint/output/: mod.rs
ucp-maintainer/src/lint/rules/: mod.rs
ucp-maintainer/tests/: curation.rs  diff.rs  mcp.json  mcp.rs  registry.rs  tokens.rs  verify.rs
ucp-synthesizer/: Cargo.toml
ucp-synthesizer/fuzz/fuzz_targets/: design_md_import.rs  smdl_parser.rs  tsx_extractor.rs  type_mapping.rs
ucp-synthesizer/src/: curation.rs  discovery.rs  lib.rs  llm.rs  merge.rs  pipeline.rs  pipeline.rs.bak  pipeline.rs.tmp  security.rs  unify.rs  utils.rs
ucp-synthesizer/src/contract/: ai_contract.rs  mcp_server.rs  mod.rs
ucp-synthesizer/src/dashboard/: generator.rs  template.html
ucp-synthesizer/src/export/: a2ui.rs  ag_ui.rs  design_md.rs  llms_txt.rs  mod.rs  w3c.rs
ucp-synthesizer/src/extract/: dioxus_ast.rs  mod.rs  rust_ast.rs  svelte_ast.rs  tokens.rs  tsx_ast.rs  vue_ast.rs
ucp-synthesizer/src/generate/: common.rs  dioxus.rs  gpui.rs  leptos.rs  mod.rs  react.rs  registry.rs  traits.rs  web_components.rs
ucp-synthesizer/src/import/: design_md.rs  mod.rs
ucp-synthesizer/src/pipeline/: conflicts.rs  enrichment.rs  extraction.rs  mod.rs  output.rs  unification.rs
ucp-synthesizer/templates/: conflict_review.html
ucp-synthesizer/tests/: curation.rs  dashboard_test.rs  dioxus_context_test.rs  dioxus_extraction.rs  dioxus_fixtures_test.rs  dioxus_generator.rs  dioxus_merge_context.rs  dioxus_pipeline.rs  discovery.rs  export_snapshots.rs  gpui_generator.rs  gpui_real_snapshot_test.rs  incremental_merge.rs  leptos_generator.rs  llm_mock.rs  pipeline_integration.rs  proptest_conflicts.rs  proptest_generator.rs  proptest_unify.rs  react_generator.rs  registry_export.rs  rust_extraction.rs  rust_struct_extraction.rs  security.rs  token_extraction.rs  tsx_extraction.rs  unify.rs  v030_integration.rs  v050_integration.rs  v060_integration.rs  v090_integration.rs  w3c_export.rs
ucp-synthesizer/tests/common/: mod.rs
ucp-synthesizer/tests/fixtures/: gpui_real_snapshot.json  gpui_snapshot.json
ucp-synthesizer/tests/fixtures/dioxus/src/: accordion.rs  button.rs  dialog.rs
ucp-synthesizer/tests/leptos_shadcn_fixtures/: badge.rs  button.rs
ucp-synthesizer/tests/snapshots/: dioxus_generator__dioxus_button.snap  export_snapshots__a2ui_catalog.snap  export_snapshots__ag_ui_events.snap  export_snapshots__ai_contract.snap  export_snapshots__design_md.snap  export_snapshots__llms_txt.snap  gpui_generator__gpui_button.snap  leptos_generator__leptos_button.snap  react_generator__react_button.snap
(+49 files in other folders)
