[package]
name = "ucp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ucp-core = { path = "../ucp-core" }
ucp-synthesizer = { path = "../ucp-synthesizer" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.2.1"
