[package]
name = "ucp-maintainer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ucp-core = { path = "../ucp-core" }
ucp-synthesizer = { path = "../ucp-synthesizer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.30"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2.7"
notify = "6.1"
walkdir = "2.5"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.2.1"
insta = { version = "1.47.2", features = ["json"] }
proptest = "1.11.0"
tempfile = "3"
