[package]
name = "ucp-synthesizer"
version.workspace = true
edition.workspace = true
license.workspace = true


[features]
default = ["github-discovery", "license-check", "llm"]
github-discovery = ["octocrab"]
license-check = ["spdx"]
llm = ["reqwest"]

[dependencies]
ucp-core = { path = "../ucp-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
spdx = { version = "0.10", optional = true }
octocrab = { version = "0.42", optional = true }
regex = "1.10"
async-trait = "0.1"
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
askama = "0.12"
serde_yaml = "0.9.34"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
tempfile = "3"
insta = { version = "1.47.2", features = ["json", "yaml"] }
proptest = "1.11.0"
